--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ examples/liver_tumor_segmentation.ipynb
 segmentations
 volume_pt1
 examples
+experiments
+__pycache__/
+**/__pycache__/
+*.py[cod]
+*$py.class
