--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,34 @@
-torch>=1.8.0
-torchvision>=0.9.0
-nibabel>=3.2.0
-numpy>=1.19.0
-pandas>=1.2.0
-scikit-learn>=0.24.0
-matplotlib>=3.3.0
-seaborn>=0.11.0
-tqdm>=4.50.0
-pillow>=8.0.0
-opencv-python>=4.5.0
+# Core dependencies
+torch>=1.10.0
+torchvision>=0.11.0
+numpy>=1.21.0
+scipy>=1.7.0
 
-# Optional dependencies for development
-pytest>=6.0.0
-black>=22.0.0
-flake8>=3.9.0
-mypy>=0.910
+# Medical imaging
+nibabel>=3.2.0
+pydicom>=2.2.0
+SimpleITK>=2.1.0
+pynrrd>=0.4.0
+
+# Data processing and visualization
+scikit-image>=0.18.0
+scikit-learn>=1.0.0
+matplotlib>=3.4.0
+seaborn>=0.11.0
+pandas>=1.3.0
+
+# Configuration and utilities
+pydantic>=1.8.0
+PyYAML>=5.4.0
+tqdm>=4.62.0
+
+# Optional dependencies for enhanced functionality
+# efficientnet-pytorch>=0.7.0  # For EfficientNet encoders
+# tensorboard>=2.7.0           # For training visualization
+# wandb>=0.12.0                # For experiment tracking
+
+# Development dependencies (optional)
+# pytest>=6.2.0
+# black>=21.0.0
+# flake8>=3.9.0
+# mypy>=0.910
